# twitcher

./: .gitignore  CMakeLists.txt  ConfigReference.md  LICENSE  Makefile  README.md  config.c  config.h  docker-compose.yml  hwman.h  index.html  lwipopts.h  main.c  mbedtls_config.h  tcpserver.h  test.html  websockets.c  wifi.c  wifi.h
make/: css.map  html.map  js-comp.map  js.map  tpl.mk
src/: config.c  config.h  hwman.c  lwipopts.h  main.c  tcpserver.c  tcpserver.h  websockets.c  websockets.h  wifi.c  wifi.h
src/config/: config_iterator.c  config_iterator.h
tests/: test_config_iterator.c
ui/: MakefileOld  body.html  head.html  layout.css  layout.html  layout.js  template.html
ui/content/: command.css  command.html  components.js  graph.css  graph.html  graph.js  network.css  network.js  settings.css
ui/content/components/: button.js  components.js  edge.js  gpo.js  led.js  parent.js
ui/scripts/: base.js  config.js  control.js  marshalling.js
ui/styles/: base.css
